--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@
 }
 
 .tui-pagination .tui-page-btn {
-  display: inline-block;
+  display: inline-flex;
   position: relative;
   width: 40px;
   height: 40px;
